# escience-docker-reprozip

./: .gitignore  Dockerfile  README.md  README_EXECUCAO.md  compare_metrics.py  gpu_metadata.csv  gpu_price_history.csv  main.py  pyproject.toml
artifacts/metrics/: artifact_sizes.csv  artifact_sizes.json  comparison_summary.csv  comparison_summary.json  external_run_metrics.csv  external_run_summary.csv  external_run_summary.json  latest_pipeline_run.json  output_hashes.csv  output_hashes.json  packaging_metrics.csv  packaging_summary.csv  packaging_summary.json  pipeline_runs.csv
artifacts/processed/: basic_statistics.csv  gpu_price_enriched.csv  gpu_summary.csv  monthly_market_average.csv  price_correlations.csv
src/gpu_pipeline/: __init__.py  analysis.py  config.py  ingestion.py  metrics.py  pipeline.py  transform.py  visualization.py
